--- a/public/register.html
+++ b/public/register.html
@@ -12,14 +12,47 @@
   <body>
     <div class="content">
 <img src="/images/bridge-my-path-logo-final.png" alt="Bridge My Path" />
-<h1 class="main_font">
-  Welcome to Bridge My Path
-</h1>
-<ul class="main_font">
-  <li>Choose your path</li>
-  <li>Benefit and learn from others who have been down your path</li>
-  <li>As you advance, help others do what you have done</li>
-</ul>
+<h1>Sign Up for Bridge My Path</h1>
+<table class="form">
+  <tr>
+    <td>
+      <label for="email">
+        Email
+      </label>
+    </td>
+    <td>
+      <input type="text" name="email" />
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <label for="password">
+        Password
+      </label>
+    </td>
+    <td>
+      <input type="password" name="password" />
+    </td>
+  </tr>
+  <tr>
+    <td>
+      <label for="confirm_password">
+        Confirm password
+      </label>
+    </td>
+    <td>
+      <input type="password" name="confirm_password" />
+    </td>
+  </tr>
+  <tr>
+    <td>
+      &nbsp;
+    </td>
+    <td>
+      <input type="submit" name="signup" value="Sign up" />
+    </td>
+  </tr>
+</table>
     </div>
     <div class="footer">
 Copyright &copy; 2011 Marshall P. Hayes    </div>
