got mailchimp integration working

--- a/public/register.html
+++ b/public/register.html
@@ -8,8 +8,10 @@
     <meta name="keywords" content="mentor guidance path bridge learn coach achieve" />
     <meta name="description" content="" />
     <meta name="copyright" content="2011, Marshall P. Hayes" />
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   </head>
   <body>
+    <img src="/images/bridge-my-path-logo-final.png" alt="Bridge My Path" />
     <div class="content">
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -55,21 +57,6 @@
 <a href="#" id="mc_embed_close" class="mc_embed_close" style="background: transparent url(http://bridgemypath.us2.list-manage1.com/images/closebox.png) no-repeat;display: none;height: 30px;width: 30px;text-indent: -999em;position: absolute;top: 10px;right: -10px;">Close</a>
 </form>
 </div>
-<script  type="text/javascript">
-try {
-    var jqueryLoaded=jQuery;
-    jqueryLoaded=true;
-} catch(err) {
-    var jqueryLoaded=false;
-}
-if (!jqueryLoaded) {
-    var head= document.getElementsByTagName('head')[0];
-    var script= document.createElement('script');
-    script.type= 'text/javascript';
-    script.src= 'http://ajax.googleapis.com/ajax/libs/jquery/1.4.4/jquery.min.js';
-    head.appendChild(script);    
-}
-</script>
 <script type="text/javascript" src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
 
 <script type="text/javascript">
@@ -196,7 +183,7 @@ $(document).ready(function(){
     }
     if (show){
     $('#mc_embed_signup a.mc_embed_close').show();
-    setTimeout( function(){ $('#mc_embed_signup').fadeIn();} , 2000);
+    setTimeout( function(){ $('#mc_embed_signup').fadeIn();} , 200);
     	$('#mc_embed_signup a.mc_embed_close').click(function(){ mcEvilPopupClose();});
     }
 });
@@ -221,7 +208,6 @@ function mcEvilPopupClose(){
     <div class="footer">
 Copyright &copy; 2011 Marshall P. Hayes    </div>
   </body>
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="/javascripts/cufon-yui.js"></script>
   <script type="text/javascript" src="/javascripts/Arial_Rounded_MT_Bold_400.font.js"></script>
   <script>;(function () {
