--- a/public/signup.html
+++ b/public/signup.html
@@ -8,8 +8,10 @@
     <meta name="keywords" content="mentor guidance path bridge learn coach achieve" />
     <meta name="description" content="" />
     <meta name="copyright" content="2011, Marshall P. Hayes" />
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   </head>
   <body>
+    <img src="/images/bridge-my-path-logo-final.png" alt="Bridge My Path" />
     <div class="content">
 <img src="/images/bridge-my-path-logo-final.png" alt="Bridge My Path" />
 <h1>Sign Up for Bridge My Path</h1>
@@ -57,7 +59,6 @@
     <div class="footer">
 Copyright &copy; 2011 Marshall P. Hayes    </div>
   </body>
-  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   <script type="text/javascript" src="/javascripts/cufon-yui.js"></script>
   <script type="text/javascript" src="/javascripts/Arial_Rounded_MT_Bold_400.font.js"></script>
   <script>;(function () {
