Got some of Carly's layout implemented in HTML/CSS

--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,6 @@
   <head>
     <meta charset="utf-8" />
 <!--Bridge My Path Version: 0.0.1-->
-    <link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" />
     <link rel="stylesheet" href="/stylesheets/screen.css" type="text/css" />
     <meta name="keywords" content="mentor guidance path bridge learn coach achieve" />
     <meta name="description" content="" />
@@ -14,16 +13,36 @@
     <img src="/images/bridge-my-path-logo-final.png" alt="Bridge My Path" />
     <div class="content">
 <h1 class="main_font">
-  Welcome to Bridge My Path
+  Choose your Path!
 </h1>
-<ul class="main_font">
-  <li>Choose your path</li>
-  <li>Benefit and learn from others who have been down your path</li>
-  <li>As you advance, help others do what you have done</li>
-</ul>
-<a id="register" href="#">
-  Sign up for Bridge My Path
-</a>
+<div class="path rounded">
+  <img class="path_icon" src="/images/book-icon.png" alt="Write" />
+  <span class="path_name main_font">
+    Write
+  </span>
+  <img class="path_steps" src="/images/2-circle-bar.png" alt="Path Nodes" />
+  <div class="path_population">
+1078 Participants  </div>
+  <a class="join_path" href="/join"></a>
+  <div class="path_step_label first">
+    Start your <br />work
+  </div>
+  <div class="path_step_label">
+    Write a <br />chapter
+  </div>
+  <div class="path_step_label">
+    Complete first <br />draft
+  </div>
+  <div class="path_step_label">
+    Edit your <br />book
+  </div>
+  <div class="path_step_label">
+    Publish your <br />book
+  </div>
+  <div class="path_step_label">
+    Win an <br />award
+  </div>
+</div>
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
