Got Karate and Engineering in there

--- a/public/index.html
+++ b/public/index.html
@@ -16,32 +16,97 @@
   Choose your Path!
 </h1>
 <div class="path rounded">
-  <img class="path_icon" src="/images/book-icon.png" alt="Write" />
-  <span class="path_name main_font">
-    Write
-  </span>
-  <img class="path_steps" src="/images/2-circle-bar.png" alt="Path Nodes" />
+  <img class="path_icon" src="/images/book-icon.png" alt="Writing" />
+  <div class="path_step_wrapper">
+    <h1 class="path_name main_font">
+      Writing
+    </h1>
+    <img class="path_steps" src="/images/2-circle-bar.png" alt="Path Nodes" />
+    <p>&nbsp;</p>
+    <div class="path_step_label first">
+      Start your <br />work
+    </div>
+    <div class="path_step_label">
+      Write a <br />chapter
+    </div>
+    <div class="path_step_label">
+      Complete first <br />draft
+    </div>
+    <div class="path_step_label">
+      Edit your <br />book
+    </div>
+    <div class="path_step_label">
+      Publish your <br />book
+    </div>
+    <div class="path_step_label">
+      Win an <br />award
+    </div>
+  </div>
   <div class="path_population">
 1078 Participants  </div>
   <a class="join_path" href="/join"></a>
-  <div class="path_step_label first">
-    Start your <br />work
+</div>
+<div class="path rounded">
+  <img class="path_icon" src="/images/karate-icon.png" alt="Karate" />
+  <div class="path_step_wrapper">
+    <h1 class="path_name main_font">
+      Karate
+    </h1>
+    <img class="path_steps" src="/images/4-circle-bar.png" alt="Path Nodes" />
+    <p>&nbsp;</p>
+    <div class="path_step_label first">
+      White belt
+    </div>
+    <div class="path_step_label">
+      Yellow belt
+    </div>
+    <div class="path_step_label">
+      Blue belt
+    </div>
+    <div class="path_step_label">
+      Red belt
+    </div>
+    <div class="path_step_label">
+      Brown belt
+    </div>
+    <div class="path_step_label">
+      Black belt
+    </div>
   </div>
-  <div class="path_step_label">
-    Write a <br />chapter
+  <div class="path_population">
+944 Participants  </div>
+  <a class="join_path" href="/join"></a>
+</div>
+<div class="path rounded">
+  <img class="path_icon" src="/images/blueprint-icon.png" alt="Engineering" />
+  <div class="path_step_wrapper">
+    <h1 class="path_name main_font">
+      Engineering
+    </h1>
+    <img class="path_steps" src="/images/4-circle-bar.png" alt="Path Nodes" />
+    <p>&nbsp;</p>
+    <div class="path_step_label first">
+      New grad
+    </div>
+    <div class="path_step_label">
+      Intern
+    </div>
+    <div class="path_step_label">
+      Junior Engineer
+    </div>
+    <div class="path_step_label">
+      Staff Engineer
+    </div>
+    <div class="path_step_label">
+      Senior Engineer
+    </div>
+    <div class="path_step_label">
+      Fellow
+    </div>
   </div>
-  <div class="path_step_label">
-    Complete first <br />draft
-  </div>
-  <div class="path_step_label">
-    Edit your <br />book
-  </div>
-  <div class="path_step_label">
-    Publish your <br />book
-  </div>
-  <div class="path_step_label">
-    Win an <br />award
-  </div>
+  <div class="path_population">
+852 Participants  </div>
+  <a class="join_path" href="/join"></a>
 </div>
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
