--- a/public/index1.html
+++ b/public/index1.html
@@ -13,16 +13,16 @@
   <body>
   <div class="page">
   <div class="header"><div class="wrapper">
-  <a title="bridge my path home" id="logo" href="/"><img class="logoheader" width="252" height="86" alt="Blogger" src="images/bridge-my-path-logo-final.png"></a>
-  <div class="login"><a href="#">Login</a>  or 
-  <a href="#"><img class="logoheader" width="99" height="28" alt="Register" src="images/register-button.png"></a>
+  <a title="bridge my path home" id="logo" href="/"><img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png"></a>
+  <div class="login"><a href="#">Login</a>&nbsp;&nbsp;&nbsp;<font class="or">or</font>&nbsp;&nbsp;&nbsp; 
+    <a class="register" href="#"></a>
   </div>
   <div id="menu">
 <ul>
-							<li><a href="index.html">Home</a></li>
-							<li><a href="features.html">How it Works</a></li>
-							<li><a href="pricing.html">About</a></li>
-							<li><a href="customers.html">Contact Us</a></li>
+							<li width="67px"><a href="#">Home</a></li>
+							<li><a href="#"> How it Works</a></li>
+							<li><a href="#">About</a></li>
+							<li><a href="#">Contact Us</a></li>
 						</ul>
   </div>  </div>
   </div></div>
