OK, got nav layout/CSS fixed

--- a/public/signup.html
+++ b/public/signup.html
@@ -10,8 +10,6 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   </head>
   <body>
-    <img src="/images/bridge-my-path-logo-final.png" alt="Bridge My Path" />
-    <div class="content">
 <h1>Sign Up for Bridge My Path</h1>
 <table class="form">
   <tr>
@@ -53,8 +51,7 @@
     </td>
   </tr>
 </table>
-    </div>
-    <div class="footer">
+    <div class="footer content">
 Copyright &copy; 2011 Marshall P. Hayes    </div>
   </body>
   <script type="text/javascript" src="/javascripts/cufon-yui.js"></script>
