--- a/public/index.html
+++ b/public/index.html
@@ -10,104 +10,132 @@
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   </head>
   <body>
-    <img src="/images/bridge-my-path-logo-final.png" alt="Bridge My Path" />
-    <div class="content">
-<h1 class="main_font">
-  Choose your Path!
-</h1>
-<div class="path rounded">
-  <img class="path_icon" src="/images/book-icon.png" alt="Writing" />
-  <div class="path_step_wrapper">
-    <h1 class="path_name main_font">
-      Writing
-    </h1>
-    <img class="path_steps" src="/images/2-circle-bar.png" alt="Path Nodes" />
-    <p>&nbsp;</p>
-    <div class="path_step_label first">
-      Start your <br />work
+<div class="header">
+  <div class="content">
+    <a title="bridge my path home" id="logo" href="/">
+      <img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png" />
+    </a>
+    <div class="login">
+      <a class="register" href="#"></a>
+      <a href="#">
+Login&nbsp;&nbsp;&nbsp;      </a>
+      <font class="or">
+        or&nbsp;&nbsp;&nbsp;
+      </font>
     </div>
-    <div class="path_step_label">
-      Write a <br />chapter
-    </div>
-    <div class="path_step_label">
-      Complete first <br />draft
-    </div>
-    <div class="path_step_label">
-      Edit your <br />book
-    </div>
-    <div class="path_step_label">
-      Publish your <br />book
-    </div>
-    <div class="path_step_label">
-      Win an <br />award
+    <div id="menu">
+      <a href="#" class="nav main_font">
+        Home
+      </a>
+      <a href="#" class="nav main_font">
+        How it Works
+      </a>
+      <a href="#" class="nav main_font">
+        About
+      </a>
+      <a href="#" class="nav main_font">
+        Contact Us
+      </a>
     </div>
   </div>
-  <div class="path_population">
-1078 Participants  </div>
-  <a class="join_path" href="/join"></a>
 </div>
-<div class="path rounded">
-  <img class="path_icon" src="/images/karate-icon.png" alt="Karate" />
-  <div class="path_step_wrapper">
-    <h1 class="path_name main_font">
-      Karate
-    </h1>
-    <img class="path_steps" src="/images/4-circle-bar.png" alt="Path Nodes" />
-    <p>&nbsp;</p>
-    <div class="path_step_label first">
-      White belt
+<div class="content">
+  <h1 class="main_font">
+    Choose your Path!
+  </h1>
+  <div class="path rounded">
+    <img class="path_icon" src="/images/book-icon.png" alt="Writing" />
+    <div class="path_step_wrapper">
+      <h1 class="path_name main_font">
+        Writing
+      </h1>
+      <img class="path_steps" src="/images/2-circle-bar.png" alt="Path Nodes" />
+      <p>&nbsp;</p>
+      <div class="path_step_label first">
+        Start your <br />work
+      </div>
+      <div class="path_step_label">
+        Write a <br />chapter
+      </div>
+      <div class="path_step_label">
+        Complete first <br />draft
+      </div>
+      <div class="path_step_label">
+        Edit your <br />book
+      </div>
+      <div class="path_step_label">
+        Publish your <br />book
+      </div>
+      <div class="path_step_label">
+        Win an <br />award
+      </div>
     </div>
-    <div class="path_step_label">
-      Yellow belt
-    </div>
-    <div class="path_step_label">
-      Blue belt
-    </div>
-    <div class="path_step_label">
-      Red belt
-    </div>
-    <div class="path_step_label">
-      Brown belt
-    </div>
-    <div class="path_step_label">
-      Black belt
-    </div>
+    <div class="path_population">
+1078 Participants    </div>
+    <a class="join_path" href="/join"></a>
   </div>
-  <div class="path_population">
-944 Participants  </div>
-  <a class="join_path" href="/join"></a>
-</div>
-<div class="path rounded">
-  <img class="path_icon" src="/images/blueprint-icon.png" alt="Engineering" />
-  <div class="path_step_wrapper">
-    <h1 class="path_name main_font">
-      Engineering
-    </h1>
-    <img class="path_steps" src="/images/4-circle-bar.png" alt="Path Nodes" />
-    <p>&nbsp;</p>
-    <div class="path_step_label first">
-      New grad
+  <div class="path rounded">
+    <img class="path_icon" src="/images/karate-icon.png" alt="Karate" />
+    <div class="path_step_wrapper">
+      <h1 class="path_name main_font">
+        Karate
+      </h1>
+      <img class="path_steps" src="/images/4-circle-bar.png" alt="Path Nodes" />
+      <p>&nbsp;</p>
+      <div class="path_step_label first">
+        White belt
+      </div>
+      <div class="path_step_label">
+        Yellow belt
+      </div>
+      <div class="path_step_label">
+        Blue belt
+      </div>
+      <div class="path_step_label">
+        Red belt
+      </div>
+      <div class="path_step_label">
+        Brown belt
+      </div>
+      <div class="path_step_label">
+        Black belt
+      </div>
     </div>
-    <div class="path_step_label">
-      Intern
-    </div>
-    <div class="path_step_label">
-      Junior Engineer
-    </div>
-    <div class="path_step_label">
-      Staff Engineer
-    </div>
-    <div class="path_step_label">
-      Senior Engineer
-    </div>
-    <div class="path_step_label">
-      Fellow
-    </div>
+    <div class="path_population">
+944 Participants    </div>
+    <a class="join_path" href="/join"></a>
   </div>
-  <div class="path_population">
-852 Participants  </div>
-  <a class="join_path" href="/join"></a>
-</div>
+  <div class="path rounded">
+    <img class="path_icon" src="/images/blueprint-icon.png" alt="Engineering" />
+    <div class="path_step_wrapper">
+      <h1 class="path_name main_font">
+        Engineering
+      </h1>
+      <img class="path_steps" src="/images/4-circle-bar.png" alt="Path Nodes" />
+      <p>&nbsp;</p>
+      <div class="path_step_label first">
+        New grad
+      </div>
+      <div class="path_step_label">
+        Intern
+      </div>
+      <div class="path_step_label">
+        Junior Engineer
+      </div>
+      <div class="path_step_label">
+        Staff Engineer
+      </div>
+      <div class="path_step_label">
+        Senior Engineer
+      </div>
+      <div class="path_step_label">
+        Fellow
+      </div>
+    </div>
+    <div class="path_population">
+852 Participants    </div>
+    <a class="join_path" href="/join"></a>
+  </div>
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
@@ -115,20 +143,20 @@
     <!-- Begin MailChimp Signup Form -->
 <!--[if IE]>
 <style type="text/css" media="screen">
-#mc_embed_signup fieldset {position: relative;}
-#mc_embed_signup legend {position: absolute; top: -1em; left: .2em;}
+  #mc_embed_signup fieldset {position: relative;}
+  #mc_embed_signup legend {position: absolute; top: -1em; left: .2em;}
 </style>
 <![endif]--> 
 <!--[if IE 7]>
 <style type="text/css" media="screen">
-.mc-field-group {overflow:visible;}
+  .mc-field-group {overflow:visible;}
 </style>
 <![endif]-->
 
 <div id="mc_embed_signup" style="width: 100%;position: absolute;top: 0;left: 0;height: 100%;background-color: rgba(0,0,0,.8);display: none;z-index: 10000;">
 <form action="http://bridgemypath.us2.list-manage.com/subscribe/post?u=bfe805f5b62e541feb8c209cd&amp;id=cc76789e99" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" style="position: fixed;top: 10%;left: 50%;width: 50%;margin-left: -25%;font: normal 100% Arial, sans-serif;font-size: 10px;">
-<fieldset style="-moz-border-radius: 4px;border-radius: 4px;-webkit-border-radius: 4px;border: 1px solid #ccc;padding-top: 1.5em;margin: .5em 0;background-color: #fff;color: #000;text-align: left;">
-<legend style="white-space: normal;text-transform: capitalize;font-weight: bold;color: #000;background: #fff;padding: .5em 1em;border: 1px solid #1px solid #ccc_COLOR;-moz-border-radius: 4px;border-radius: 4px;-webkit-border-radius: 4px;font-size: 1.2em;"><span>Signup</span></legend>
+  <fieldset style="-moz-border-radius: 4px;border-radius: 4px;-webkit-border-radius: 4px;border: 1px solid #ccc;padding-top: 1.5em;margin: .5em 0;background-color: #fff;color: #000;text-align: left;">
+  <legend style="white-space: normal;text-transform: capitalize;font-weight: bold;color: #000;background: #fff;padding: .5em 1em;border: 1px solid #1px solid #ccc_COLOR;-moz-border-radius: 4px;border-radius: 4px;-webkit-border-radius: 4px;font-size: 1.2em;"><span>Signup</span></legend>
 <div class="indicate-required" style="text-align: right;font-style: italic;overflow: hidden;color: #000;margin: 0 9% 0 0;">* indicates required</div>
 <div class="mc-field-group" style="margin: 0 5% 0 5%;padding: 2px 0;clear: both;overflow: hidden;">
 <label for="mce-EMAIL" style="display: block;margin: 15px 0 .3em 0;font-weight: bold;">Email Address <strong class="note-required">*</strong>
@@ -143,13 +171,13 @@
 <label for="mce-LNAME" style="display: block;margin: 15px 0 .3em 0;font-weight: bold;">Last Name </label>
 <input type="text" value="" name="LNAME" class="" id="mce-LNAME" style="margin-right: 1.5em;padding: .2em .3em;width: 90%;float: left;z-index: 999;">
 </div>
-	<div id="mce-responses" style="float: left;top: -1.4em;padding: 0em .5em 0em .5em;overflow: hidden;width: 90%;margin: 0 5%;clear: both;">
-		<div class="response" id="mce-error-response" style="display: none;margin: 1em 0;padding: 1em .5em .5em 0;font-weight: bold;float: left;top: -1.5em;z-index: 1;width: 80%;background: FBE3E4;color: #D12F19;"></div>
-		<div class="response" id="mce-success-response" style="display: none;margin: 1em 0;padding: 1em .5em .5em 0;font-weight: bold;float: left;top: -1.5em;z-index: 1;width: 80%;background: #E3FBE4;color: #529214;"></div>
-	</div>
-	<div><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="clear: both;margin: 1em 0 1em 5%;width: auto;display: block;"></div>
-</fieldset>	
-<a href="#" id="mc_embed_close" class="mc_embed_close" style="background: transparent url(http://bridgemypath.us2.list-manage1.com/images/closebox.png) no-repeat;display: none;height: 30px;width: 30px;text-indent: -999em;position: absolute;top: 10px;right: -10px;">Close</a>
+    <div id="mce-responses" style="float: left;top: -1.4em;padding: 0em .5em 0em .5em;overflow: hidden;width: 90%;margin: 0 5%;clear: both;">
+      <div class="response" id="mce-error-response" style="display: none;margin: 1em 0;padding: 1em .5em .5em 0;font-weight: bold;float: left;top: -1.5em;z-index: 1;width: 80%;background: FBE3E4;color: #D12F19;"></div>
+      <div class="response" id="mce-success-response" style="display: none;margin: 1em 0;padding: 1em .5em .5em 0;font-weight: bold;float: left;top: -1.5em;z-index: 1;width: 80%;background: #E3FBE4;color: #529214;"></div>
+    </div>
+    <div><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="btn" style="clear: both;margin: 1em 0 1em 5%;width: auto;display: block;"></div>
+  </fieldset>	
+  <a href="#" id="mc_embed_close" class="mc_embed_close" style="background: transparent url(http://bridgemypath.us2.list-manage1.com/images/closebox.png) no-repeat;display: none;height: 30px;width: 30px;text-indent: -999em;position: absolute;top: 10px;right: -10px;">Close</a>
 </form>
 </div>
 <script type="text/javascript" src="http://downloads.mailchimp.com/js/jquery.form-n-validate.js"></script>
@@ -188,13 +216,13 @@ $(document).ready( function($) {
                                 });
                             $(':hidden', this).each(
                                 function(){
-                                	if ( fields[0].value=='MM' && fields[1].value=='DD' && fields[2].value=='YYYY' ){
-                                		this.value = '';
-								} else if ( fields[0].value=='' && fields[1].value=='' && fields[2].value=='' ){
-                                		this.value = '';
-								} else {
-                                    this.value = fields[0].value+'/'+fields[1].value+'/'+fields[2].value;
-                                }
+                                  if ( fields[0].value=='MM' && fields[1].value=='DD' && fields[2].value=='YYYY' ){
+                                    this.value = '';
+                  } else if ( fields[0].value=='' && fields[1].value=='' && fields[2].value=='' ){
+                                    this.value = '';
+                  } else {
+                                      this.value = fields[0].value+'/'+fields[1].value+'/'+fields[2].value;
+                                  }
                                 });
                         });
                     return mce_validator.form();
@@ -212,7 +240,7 @@ function mce_success_cb(resp){
         $('#mce-'+resp.result+'-response').html(resp.msg);
         $('#mc-embedded-subscribe-form').each(function(){
             this.reset();
-    	});
+      });
     } else {
         var index = -1;
         var msg;
@@ -294,16 +322,17 @@ function mcEvilPopupClose(){
     document.cookie = 'MCEvilPopupClosed=yes;expires=' + expires_date.toGMTString()+';path=/';
 }
 </script>
-<!--End mc_embed_signup--><script type="text/javascript">
+<!--End mc_embed_signup-->  <script type="text/javascript">
 $(document).ready(function(){
-  $("#register").click(function() {
+  $(".join_path").click(function() {
     $('#mc_embed_signup a.mc_embed_close').show();
     setTimeout( function(){ $('#mc_embed_signup').fadeIn();} , 200);
     $('#mc_embed_signup a.mc_embed_close').click(function(){ mcEvilPopupClose();});
+    return false;
   });
-});</script>
-    </div>
-    <div class="footer">
+});  </script>
+</div>
+    <div class="footer content">
 Copyright &copy; 2011 Marshall P. Hayes    </div>
   </body>
   <script type="text/javascript" src="/javascripts/cufon-yui.js"></script>
