--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@ Login&nbsp;&nbsp;&nbsp;      </a>
       </font>
     </div>
     <div id="menu">
-      <a href="#" class="nav main_font" style="background-image:url('../images/home-active.png');">
+      <a href="#" class="nav main_font">
         Home
       </a>
       <a href="#" class="nav main_font">
