Got register page done

--- a/public/index.html
+++ b/public/index.html
@@ -11,35 +11,35 @@
   </head>
   <body>
     <div class="wrapper">
-<div class="header">
-  <div class="content">
-    <a title="bridge my path home" id="logo" href="/">
-      <img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png" />
-    </a>
-    <div class="login">
-      <a class="register" href="#"></a>
-      <a href="#">
-Login&nbsp;&nbsp;&nbsp;      </a>
-      <font class="or">
-        or&nbsp;&nbsp;&nbsp;
-      </font>
-    </div>
-    <div id="menu">
-      <a href="#" class="nav main_font">
-        Home
-      </a>
-      <a href="#" class="nav main_font">
-        How it Works
-      </a>
-      <a href="#" class="nav main_font">
-        About
-      </a>
-      <a href="#" class="nav main_font">
-        Contact Us
-      </a>
-    </div>
-  </div>
-</div>
+      <div class="header">
+        <div class="content">
+          <a title="bridge my path home" id="logo" href="/">
+            <img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png" />
+          </a>
+          <div class="login">
+            <a class="register" href="/register.html"></a>
+            <a href="#">
+Login&nbsp;&nbsp;&nbsp;            </a>
+            <font class="or">
+              or&nbsp;&nbsp;&nbsp;
+            </font>
+          </div>
+          <div id="menu">
+            <a href="#" class="nav main_font">
+              Home
+            </a>
+            <a href="#" class="nav main_font">
+              How it Works
+            </a>
+            <a href="#" class="nav main_font">
+              About
+            </a>
+            <a href="#" class="nav main_font">
+              Contact Us
+            </a>
+          </div>
+        </div>
+      </div>
 <div class="content">
   <h1 class="main_font">
     Choose your Path!
