changed all the paths to relative

--- a/public/register.html
+++ b/public/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 <!--Bridge My Path Version: 0.0.1-->
-    <link rel="stylesheet" href="/stylesheets/screen.css" type="text/css" />
+    <link rel="stylesheet" href="stylesheets/screen.css" type="text/css" />
     <meta name="keywords" content="mentor guidance path bridge learn coach achieve" />
     <meta name="description" content="" />
     <meta name="copyright" content="2011, Marshall P. Hayes" />
@@ -17,7 +17,7 @@
             <img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png" />
           </a>
           <div class="login">
-            <a class="register" href="/register.html"></a>
+            <a class="register" href="register.html"></a>
             <a href="#">
 Login&nbsp;&nbsp;&nbsp;            </a>
             <font class="or">
@@ -69,7 +69,7 @@ Login&nbsp;&nbsp;&nbsp;            </a>
     </div>
   </div>
   <div class="register_divider">
-    <img src="/images/vertical-divider-register.png" alt="divider" />
+    <img src="images/vertical-divider-register.png" alt="divider" />
   </div>
   <div class="register_quote main_font">
     <p><span class="quote">&ldquo;</span>Welcome to the Bridge My Path community.</p>
@@ -118,8 +118,8 @@ help those that are following behind you.
       </div>
     </div>
   </body>
-  <script type="text/javascript" src="/javascripts/cufon-yui.js"></script>
-  <script type="text/javascript" src="/javascripts/Arial_Rounded_MT_Bold_400.font.js"></script>
+  <script type="text/javascript" src="javascripts/cufon-yui.js"></script>
+  <script type="text/javascript" src="javascripts/Arial_Rounded_MT_Bold_400.font.js"></script>
   <script>;(function () {
     return Cufon.replace('.main_font');
   })();</script>
