Relative image URLs

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
           </a>
           <div class="login">
             <a class="register" href="/register.html"></a>
-            <a href="#">
+            <a href="/login.html">
 Login&nbsp;&nbsp;&nbsp;            </a>
             <font class="or">
               or&nbsp;&nbsp;&nbsp;
@@ -45,12 +45,12 @@ Login&nbsp;&nbsp;&nbsp;            </a>
     Choose your Path!
   </h1>
   <div class="path rounded">
-    <img class="path_icon" src="/images/book-icon.png" alt="Writing" />
+    <img class="path_icon" src="images/book-icon.png" alt="Writing" />
     <div class="path_step_wrapper">
       <h1 class="path_name main_font">
         Writing
       </h1>
-      <img class="path_steps" src="/images/2-circle-bar.png" alt="Path Nodes" />
+      <img class="path_steps" src="images/2-circle-bar.png" alt="Path Nodes" />
       <p>&nbsp;</p>
       <div class="path_step_label first">
         Start your <br />work
@@ -76,12 +76,12 @@ Login&nbsp;&nbsp;&nbsp;            </a>
     <a class="join_path" href="/join"></a>
   </div>
   <div class="path rounded">
-    <img class="path_icon" src="/images/karate-icon.png" alt="Karate" />
+    <img class="path_icon" src="images/karate-icon.png" alt="Karate" />
     <div class="path_step_wrapper">
       <h1 class="path_name main_font">
         Karate
       </h1>
-      <img class="path_steps" src="/images/4-circle-bar.png" alt="Path Nodes" />
+      <img class="path_steps" src="images/4-circle-bar.png" alt="Path Nodes" />
       <p>&nbsp;</p>
       <div class="path_step_label first">
         White belt
@@ -107,12 +107,12 @@ Login&nbsp;&nbsp;&nbsp;            </a>
     <a class="join_path" href="/join"></a>
   </div>
   <div class="path rounded">
-    <img class="path_icon" src="/images/blueprint-icon.png" alt="Engineering" />
+    <img class="path_icon" src="images/blueprint-icon.png" alt="Engineering" />
     <div class="path_step_wrapper">
       <h1 class="path_name main_font">
         Engineering
       </h1>
-      <img class="path_steps" src="/images/4-circle-bar.png" alt="Path Nodes" />
+      <img class="path_steps" src="images/4-circle-bar.png" alt="Path Nodes" />
       <p>&nbsp;</p>
       <div class="path_step_label first">
         New grad
