--- a/public/register.html
+++ b/public/register.html
@@ -18,7 +18,7 @@
           </a>
           <div class="login">
             <a class="register" href="/register.html"></a>
-            <a href="#">
+            <a href="/login.html">
 Login&nbsp;&nbsp;&nbsp;            </a>
             <font class="or">
               or&nbsp;&nbsp;&nbsp;
@@ -69,7 +69,7 @@ Login&nbsp;&nbsp;&nbsp;            </a>
     </div>
   </div>
   <div class="register_divider">
-    <img src="/images/vertical-divider-register.png" alt="divider" />
+    <img src="images/vertical-divider-register.png" alt="divider" />
   </div>
   <div class="register_quote main_font">
     <p><span class="quote">&ldquo;</span>Welcome to the Bridge My Path community.</p>
