Got page titles working properly

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,9 @@
     <meta name="keywords" content="mentor guidance path bridge learn coach achieve" />
     <meta name="description" content="" />
     <meta name="copyright" content="2011, Marshall P. Hayes" />
+    <title>
+      Home | Bridge My Path
+    </title>
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   </head>
   <body>
@@ -25,7 +28,7 @@ Login&nbsp;&nbsp;&nbsp;            </a>
             </font>
           </div>
           <div id="menu">
-            <a href="#" class="nav main_font">
+            <a href="/" class="nav main_font">
               Home
             </a>
             <a href="#" class="nav main_font">
@@ -342,7 +345,7 @@ $(document).ready(function(){
 learn from those that have been down that path. As you advance,
 help those that are following behind you.
             </p>
-            <a href="#" class="nav main_font">
+            <a href="/" class="nav main_font">
               Home |
             </a>
             <a href="#" class="nav main_font">
