--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
       <div class="header">
         <div class="content">
           <a title="bridge my path home" id="logo" href="/">
-            <img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png" />
+            <img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png" border=0/>
           </a>
           <div class="login">
-            <a class="register" href="/register.html"></a>
+            <a class="register" href="register.html"></a>
             <a href="#">
 Login&nbsp;&nbsp;&nbsp;            </a>
             <font class="or">
@@ -184,8 +184,8 @@ help those that are following behind you.
       </div>
     </div>
   </body>
-  <script type="text/javascript" src="/javascripts/cufon-yui.js"></script>
-  <script type="text/javascript" src="/javascripts/Arial_Rounded_MT_Bold_400.font.js"></script>
+  <script type="text/javascript" src="javascripts/cufon-yui.js"></script>
+  <script type="text/javascript" src="javascripts/Arial_Rounded_MT_Bold_400.font.js"></script>
   <script>;(function () {
     return Cufon.replace('.main_font');
   })();</script>
