Footer fixed by Carly

--- a/public/index.html
+++ b/public/index.html
@@ -10,14 +10,14 @@
     <title>
       Home | Bridge My Path
     </title>
-    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
+    <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.min.js"></script>
   </head>
   <body>
     <div class="wrapper">
       <div class="header">
         <div class="content">
           <a title="bridge my path home" id="logo" href="/">
-            <img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png" border=0/>
+            <img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png" />
           </a>
           <div class="login">
             <a class="register" href="register.html"></a>
@@ -350,13 +350,13 @@ learn from those that have been down that path. As you advance,
 help those that are following behind you.
           </p>
           <a href="/" class="nav main_font">
-            Home |
+            Home <span>|</span>
           </a>
           <a href="#" class="nav main_font">
-            How it Works |
+            How it Works <span>|</span>
           </a>
           <a href="#" class="nav main_font">
-            About |
+            About <span>|</span>
           </a>
           <a href="#" class="nav main_font">
             Contact Us
