--- a/public/login.html
+++ b/public/login.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 <!--Bridge My Path Version: 0.0.1-->
-    <link rel="stylesheet" href="/stylesheets/screen.css" type="text/css" />
+    <link rel="stylesheet" href="stylesheets/screen.css" type="text/css" />
     <meta name="keywords" content="mentor guidance path bridge learn coach achieve" />
     <meta name="description" content="" />
     <meta name="copyright" content="2011, Marshall P. Hayes" />
@@ -20,16 +20,17 @@
             <img class="logoheader" width="252" height="86" src="images/bridge-my-path-logo-final.png" />
           </a>
           <div class="login">
-            <a class="register" href="/register.html"></a>
-            <a href="/login.html">
-Login&nbsp;&nbsp;&nbsp;            </a>
+            <a class="register" href="register.html"></a>
+            <a class="login-text" href="login.html">
+              Login
+            </a>
             <font class="or">
-              or&nbsp;&nbsp;&nbsp;
+              or
             </font>
           </div>
-          <div id="menu">
+          <div id="menu" class="home">
             <a href="/" class="nav main_font">
-              Home
+              <span>Home</span>
             </a>
             <a href="#" class="nav main_font">
               How it Works
@@ -87,51 +88,55 @@ What will you do?<span class="quote">&rdquo;</span>
     </p>
   </div>
 </div>
-      <div class="push"></div>
-      <div class="footer">
-        <div class="content">
-          <div class="footer_nav">
-            <p>
-              Where are you going? What path are you traveling? Benefit and 
+      <div class="push">
+        &nbsp;
+      </div>
+    </div>
+    <div class="footer">
+      <div class="content">
+        <div class="footer_nav">
+          <p>
+            Where are you going? What path are you traveling? Benefit and 
 learn from those that have been down that path. As you advance,
 help those that are following behind you.
-            </p>
-            <a href="/" class="nav main_font">
-              Home |
-            </a>
-            <a href="#" class="nav main_font">
-              How it Works |
-            </a>
-            <a href="#" class="nav main_font">
-              About |
-            </a>
-            <a href="#" class="nav main_font">
-              Contact Us
+          </p>
+          <a href="/" class="nav main_font">
+            Home <span>|</span>
+          </a>
+          <a href="#" class="nav main_font">
+            How it Works <span>|</span>
+          </a>
+          <a href="#" class="nav main_font">
+            About <span>|</span>
+          </a>
+          <a href="#" class="nav main_font">
+            Contact Us
+          </a>
+        </div>
+        <div class="footer_social">
+          <a class="tweet_text" href="http://twitter.com/#!/bridgemypath">
+            Just launched Bridge my Path at Startup Weekend Boulder. Woo Hoo!
+          </a>
+          <p>2 hours ago via web</p>
+          <div id="twitter_button">
+            <a href="http://twitter.com/#!/bridgemypath">
+              Follow Us
             </a>
           </div>
-          <div class="footer_social">
-            <a class="tweet_text" href="http://twitter.com/#!/bridgemypath">
-              Just launched Bridge my Path at Startup Weekend Boulder. Woo Hoo!
+          <div id="facebook_button">
+            <a href="http://www.facebook.com/pages/BridgeMyPath/191731860857359">
+              Become a Fan
             </a>
-            <p>2 hours ago via web</p>
-            <div id="twitter_button">
-              <a href="http://twitter.com/#!/bridgemypath">
-                Follow Us
-              </a>
-            </div>
-            <div id="facebook_button">
-              <a href="http://www.facebook.com/pages/BridgeMyPath/191731860857359">
-                Become a Fan
-              </a>
-            </div>
           </div>
         </div>
       </div>
     </div>
   </body>
-  <script type="text/javascript" src="/javascripts/cufon-yui.js"></script>
-  <script type="text/javascript" src="/javascripts/Arial_Rounded_MT_Bold_400.font.js"></script>
+  <script type="text/javascript" src="javascripts/cufon-yui.js"></script>
+  <script type="text/javascript" src="javascripts/Arial_Rounded_MT_Bold_400.font.js"></script>
   <script>;(function () {
-    return Cufon.replace('.main_font');
+    return Cufon.replace('.main_font', {
+      hover: true
+    });
   })();</script>
 </html>
